modified the files

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
 addopts = --html=report.html --self-contained-html
+markers =
+   pallavi: it is just for testing
+   firefox: register ff marker
+   chrome: register chrome marker
